--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,9 +20,19 @@
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
     .bg-theme-colored {
-    background: rgb(2,0,36);
-    background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(226,3,190,1) 0%, rgba(92,58,140,1) 42%, rgba(65,102,173,1) 70%, rgba(0,212,255,1) 100%);
-}
+        background: rgb(2,0,36);
+        background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(226,3,190,1) 0%, rgba(92,58,140,1) 42%, rgba(65,102,173,1) 70%, rgba(0,212,255,1) 100%);
+    }
+    .trans-logo {
+        width: 70%;
+        display: table;
+        margin: 0 auto;
+    }
+    .trans-r {
+        width: 80%;
+        display: table;
+        margin: 0 auto;
+    }
 }
 
 /* Large Devices, Wide Screens */
@@ -46,6 +56,10 @@
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 767px) {
+    .row {
+        margin-right: 0;
+        margin-left: 0;
+    }
 }
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 479px) {
@@ -53,24 +67,37 @@
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-  
-     .volunteer:hover .volunteer-info {
-    top: auto;
-}
-.bg-theme-colored h3 {
-    margin-left: 0px!important;
-}
-.menuzord .showhide {
-    height: 0px;
-}
-.bg-theme-colored {
-    background: rgb(2,0,36);
-    background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(226,3,190,1) 0%, rgba(92,58,140,1) 42%, rgba(65,102,173,1) 70%, rgba(0,212,255,1) 100%);
-}
-.title-icon {
-    padding-top: 20px;
-}
-  
+    
+    .volunteer:hover .volunteer-info {
+        top: auto;
+    }
+    .bg-theme-colored h3 {
+        margin-left: 0px!important;
+    }
+    .menuzord .showhide {
+        height: 0px;
+        position: absolute;
+        right: -16px;
+    }.menuzord-brand img {
+        max-height: 92px;
+        margin-top: -5px;
+        margin-left: -16px;
+    }
+    .bg-theme-colored {
+        background: rgb(2,0,36);
+        background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(226,3,190,1) 0%, rgba(92,58,140,1) 42%, rgba(65,102,173,1) 70%, rgba(0,212,255,1) 100%);
+    }
+    .title-icon {
+        padding-top: 20px;
+    }
+    .trans-logo {    
+        width: 20%;
+        margin: auto;
+        display: table;
+    }
+    #contact_form {
+        padding: 10px 0!important;
+    }
 }
 
 /* Extra Small Devices, Phones */
